# Agorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCZMQ.cmake  FindHypertable.cmake  FindMsgPack.cmake  FindSodium.cmake
docs/: OSX-INSTALL.txt  TODO
src/: CMakeLists.txt
src/account/: AgorialAccount.cpp  AgorialAccount.h  CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/database/: CmakeLists.txt  DBInterface.cpp  DBInterface.h
src/engine/: AgorialEngine.cpp  AgorialEngine.h  CMakeLists.txt  README.md
src/entity/: CMakeLists.txt  Entity.cpp  Entity.h
src/geometry/: Bresenham.cpp  Bresenham.h  CMakeLists.txt  Readme  VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h
src/gui/: Renderer.cpp  Renderer.h
src/handlers/: CMakeLists.txt  CertHandler.cpp  CertHandler.h  FilesystemHandler.cpp  FilesystemHandler.h  KeyboardHandler.cpp  KeyboardHandler.h
src/managers/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  ClientNetworkManager.cpp  ClientNetworkManager.h  CombatManager.cpp  CombatManager.h  EntityManager.cpp  EntityManager.h  PlayerManager.cpp  PlayerManager.h  ServerNetworkManager.cpp  ServerNetworkManager.h  WorldManager.cpp  WorldManager.h
src/network/: CMakeLists.txt  zhelpers.hpp  zmq.hpp  zmsg.hpp
src/noise/: CMakeLists.txt  OpenSimplexNoise.c  OpenSimplexNoise.h  README.md
src/octree/: CMakeLists.txt  demo.cpp
src/parsers/: CMakeLists.txt  ClientConfigParser.cpp  ClientConfigParser.h  ClientResponseParser.cpp  ClientResponseParser.h  CommandParser.cpp  CommandParser.h  ServerConfigParser.cpp  ServerConfigParser.h
src/physics/: CMakeLists.txt  FluidDynamics.h
src/player/: AgorialPlayer.cpp  AgorialPlayer.h  CMakeLists.txt
src/schedulers/: CMakeLists.txt  Parallelize.cpp  Parallelize.h  TaskSpawner.cpp  TaskSpawner.h
src/server/: CMakeLists.txt  main.cpp
src/types/: CMakeLists.txt  ColorTypes.h  LogLevels.h
src/util/: CMakeLists.txt  ClientGlobalLogger.cpp  ClientGlobalLogger.h  Constants.h  IsNumber.h  MsgQueue.h  ServerGlobalLogger.cpp  ServerGlobalLogger.h  UTF8Util.cpp  UTF8Util.h
src/world/: CMakeLists.txt  MapChunk.cpp  MapChunk.h  MapLayer.cpp  MapLayer.h  Tile.cpp  Tile.h  WorldGenerator.cpp  WorldGenerator.h
